--- a/src/Style/Views/Drawers/QuestLog.scss
+++ b/src/Style/Views/Drawers/QuestLog.scss
@@ -7,13 +7,11 @@
         border: 2px solid white;
         padding: 1rem;
         position: relative;
-        background-color: rgba(0, 0, 0, 0.3);
-        color: lightgrey;
+        background-color: whitesmoke;
         
         &__title {
             font-weight: bold;
             position: relative;
-            color: white;
             z-index: 1;
             margin-bottom: 0.25rem;
         }
