--- a/src/Style/Views/Modals/Message.scss
+++ b/src/Style/Views/Modals/Message.scss
@@ -29,7 +29,7 @@
                 &:after {
                     left: 100%;
                     top: 50%;
-                    border-left-color: black;
+                    border-left-color: white;
                 }
             }
             
@@ -39,7 +39,7 @@
                 &:after {
                     right: 100%;
                     top: 50%;
-                    border-right-color: black;
+                    border-right-color: white;
                 }
             }
             
@@ -49,7 +49,7 @@
                 &:after {
                     top: calc(100% + 0.5rem);
                     left: 50%;
-                    border-top-color: black;
+                    border-top-color: white;
                 }
             }
             
@@ -59,7 +59,7 @@
                 &:after {
                     bottom: 100%;
                     left: 50%;
-                    border-bottom-color: black;
+                    border-bottom-color: white;
                 }
             }
            
