--- a/src/Style/Views/Modals/Modal.scss
+++ b/src/Style/Views/Modals/Modal.scss
@@ -23,6 +23,7 @@
         top: 0.5rem;
         right: 0.5rem;
         color: dimgrey;
+        background-color: transparent;
         width: 1rem;
         min-width: 0;
         height: 1rem;
@@ -45,10 +46,9 @@
         width: calc(100% - 2rem);
         max-width: 60rem;
         border-radius: 0.2rem;
-        border: 1px solid black;
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
-        background-color: dimgrey;
-        color: lightgrey;
+        background-color: white;
+        color: dimgrey;
         display: flex;
         flex-direction: column;
         padding: 1rem;
