--- a/src/Style/Views/Drawers/QuestLog.scss
+++ b/src/Style/Views/Drawers/QuestLog.scss
@@ -7,7 +7,8 @@
         border: 2px solid white;
         padding: 1rem;
         position: relative;
-        background-color: whitesmoke;
+        background-color: forestgreen;
+        color: white;
         
         &__title {
             font-weight: bold;
